[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Button.gd" type="Script" id=1]
[ext_resource path="res://assets/ArtAssets/Button.tres" type="SpriteFrames" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 21.4297

[sub_resource type="CircleShape2D" id=2]
radius = 27.0539

[node name="Button" type="Node2D" groups=[
"Button",
]]
script = ExtResource( 1 )

[node name="Center" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center"]
shape = SubResource( 1 )

[node name="Gravity" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gravity"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = ExtResource( 2 )
animation = "idle"
playing = true
offset = Vector2( 0, -2 )

[connection signal="body_entered" from="Center" to="." method="_on_Center_body_entered"]
[connection signal="body_exited" from="Center" to="." method="_on_Center_body_exited"]
[connection signal="body_entered" from="Gravity" to="." method="_on_Gravity_body_entered"]
[connection signal="body_exited" from="Gravity" to="." method="_on_Gravity_body_exited"]
